2010-04-15  Oliver Hader  <oliver@typo3.org>

	* Follow-up to feature of predefining/extending values that are stored in the database

2010-04-14  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Moved logging part of writing cache files to accordant place
	* Cleanup: Moved information that determine whether a page is cachable and added to them to hook parameters
	* Cleanup: Moved implementation to write compressed content to separate method
	* Cleanup: Extended parameters of createFile_processContent hook by URI and hostname
	* Cleanup: Renamed internal variable name
	* Added feature: Add possibility to predefine/extend values that are stored in the database

2010-02-22  Michiel Roos  <michiel@netcreators.com>

	* Updated the manual

2010-02-20  Michiel Roos  <michiel@netcreators.com>

	* Feature #3286: Enable usage of value 'reg1' from cache pages (Thanks to Alienor.net)

2010-02-19  Michiel Roos  <michiel@netcreators.com>

	* Feature #4179: Create gzipped versions of cache files (Thanks to Steffen Gebert)
	* Fixed bug #5290: nc_staticfilecache caches contents of https pages! (Thanks to Stefan Galinski)
	* Fixed bug #6525: EM refers to cc_devlog (Thanks to Steffen Gebert)

2010-02-17  Michiel Roos  <michiel@netcreators.com>

	* Fixed bug #6504: port based installations doesn't work (Thanks to Stefan Galinski)

2010-01-30  Michiel Roos  <michiel@netcreators.com>

	* Change: Show original URI on hover in infomodule

2010-01-22  Michiel Roos  <michiel@netcreators.com>

	* Fixed bug #6158: Scheduler tasks: missing ext_autoload (Thanks to Peter Schuster)

2010-01-14  Michiel Roos  <michiel@netcreators.com>

	* Fixed bug #4715: List what element are of INT type. (Thanks to Mads Jensen)
	* Added feature #6026: Provide scheduler tasks (Thanks to Michael Klapper)

2010-01-14  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: tx_ncstaticfilecache::processDirtyPages() removes entries from diry queue even if the processing did not succeed
